@@ -1,3 +1,8 @@
+2016-09-21  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/77657
+	* gfortran.dg/dtio_12.f90: New test.
+
 2016-09-21  Senthil Kumar Selvaraj  <senthil_kumar.selvaraj@atmel.com>
 
 	* gcc.dg/tree-ssa/pr64130.c: Use __UINT32_TYPE__ instead of int.
